finished scraping image links, wrote script to dl images

--- a/crawl.ipynb
+++ b/crawl.ipynb
@@ -46,16 +46,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# DL images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('prods_w_images_temp.json', 'w') as fp:\n",
+    "    json.dump(prods, fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-shirt Hot Robot\n",
+      "\t1591-13041-large_default-t-shirt-hot-robot.jpg\n",
+      "\t1591-13042-large_default-t-shirt-hot-robot.jpg\n",
+      "Horloge des marées\n",
+      "\t552-9740-large_default-horloge-des-marees.jpg\n",
+      "\t552-9739-large_default-horloge-des-marees.jpg\n",
+      "\t552-13551-large_default-horloge-des-marees.jpg\n",
+      "\t552-13553-large_default-horloge-des-marees.jpg\n",
+      "\t552-13552-large_default-horloge-des-marees.jpg\n",
+      "\t552-9737-large_default-horloge-des-marees.jpg\n",
+      "\t552-9738-large_default-horloge-des-marees.jpg\n",
+      "Baromètre à cristaux\n",
+      "\t542-4526-large_default-barometre-a-cristaux.jpg\n",
+      "\t542-4525-large_default-barometre-a-cristaux.jpg\n",
+      "\t542-4527-large_default-barometre-a-cristaux.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for prod in prods[:3]:\n",
+    "    print(prod['name'])\n",
+    "    for img_url in prod['images']:\n",
+    "        url = img_url\n",
+    "        img_name = '-'.join([prod['id']]+url.split('/')[-2:])\n",
+    "        print('\\t'+img_name)\n",
+    "        image_local_path = os.path.join(\n",
+    "            save_dir\n",
+    "            ,img_name)\n",
+    "        save_img(url, image_local_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# product page scraping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'du-style/1591-t-shirt-hot-robot.html'\n",
+    "url = 'du-temps-libre/552-horloge-des-marees.html'\n",
     "url = os.path.join(base_url, url)\n",
     "htmlBytes, _ = get_p_html(url)\n",
     "soup = BeautifulSoup(htmlBytes, 'html.parser')"
@@ -70,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +155,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://lesraffineurs.b-cdn.net/13041-large_default/t-shirt-hot-robot.jpg',\n",
-       " 'https://lesraffineurs.b-cdn.net/13042-large_default/t-shirt-hot-robot.jpg']"
+       "['https://lesraffineurs.b-cdn.net/9740-large_default/horloge-des-marees.jpg',\n",
+       " 'https://lesraffineurs.b-cdn.net/9739-large_default/horloge-des-marees.jpg',\n",
+       " 'https://lesraffineurs.b-cdn.net/13551-large_default/horloge-des-marees.jpg',\n",
+       " 'https://lesraffineurs.b-cdn.net/13553-large_default/horloge-des-marees.jpg',\n",
+       " 'https://lesraffineurs.b-cdn.net/13552-large_default/horloge-des-marees.jpg',\n",
+       " 'https://lesraffineurs.b-cdn.net/9737-large_default/horloge-des-marees.jpg',\n",
+       " 'https://lesraffineurs.b-cdn.net/9738-large_default/horloge-des-marees.jpg']"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
