complete basic BoW search on 10 example images

--- a/app/query_imgs.ipynb
+++ b/app/query_imgs.ipynb
@@ -17,7 +17,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from img_search import image_search_res0, image_search_res1, IMG_INVENTORY_PATH, IMG_PATH"
+    "from imgsearch import image_search_res0, image_search_res1, image_search_res2, IMG_INVENTORY_PATH, IMG_PATH"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# static"
    ]
   },
   {
@@ -48,6 +55,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# random"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -75,6 +89,67 @@
    "source": [
     "image_search_res1('')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BoW on top10 classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_search_res2(query):\n",
+    "    # load image label data\n",
+    "    path = 'static/img_top10_labels.csv'\n",
+    "    df = pd.read_csv(path)\n",
+    "\n",
+    "    # generate BoW\n",
+    "    vect = CountVectorizer()\n",
+    "    bow = vect.fit_transform(df.content.tolist())\n",
+    "    voc = vect.vocabulary_\n",
+    "    \n",
+    "    if query in voc:\n",
+    "        img_idx = list(np.where(bow[:,voc[query]].todense() >0)[0])\n",
+    "        return df.loc[img_idx, 'image_name'].tolist()\n",
+    "    else:\n",
+    "        return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1015-8599-large_default-votre-portrait-dans-un-studio-du-xixeme-siecle.jpg',\n",
+       " '1191-10092-large_default-maillot-de-bain-iguazu.jpg']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image_search_res2('jean')"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
