added RGB conversion to transform of image loader to (attempt) to fix bug

--- a/infer_objects.ipynb
+++ b/infer_objects.ipynb
@@ -472,7 +472,9 @@
    "outputs": [],
    "source": [
     "from torchvision import transforms\n",
+    "from utils import ToRGB\n",
     "transform = transforms.Compose([            #[1]\n",
+    " ToRGB(),\n",
     " transforms.Resize(256),                    #[2]\n",
     " transforms.CenterCrop(224),                #[3]\n",
     " transforms.ToTensor(),                     #[4]\n",
