enable weighted BoW, but still has a bug, compare 'shoe' query to reproduce

--- a/app/query_imgs.ipynb
+++ b/app/query_imgs.ipynb
@@ -409,6 +409,263 @@
     "query = 'denim shoe sombrero'\n",
     "image_search_res3(query)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BoW on top10 classes - multi word w/ weighting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from imgsearch import cosine_sim\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    path='static/img_top10_labels.csv'\n",
+    "    \n",
+    "    # load image label data\n",
+    "    df = pd.read_csv(path)\n",
+    "\n",
+    "    # generate BoW\n",
+    "    vect = CountVectorizer()\n",
+    "    bow = vect.fit_transform(df.content.tolist())\n",
+    "    voc = vect.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pd.read_csv('static/imagenet_classes_to_labels_map.txt')\n",
+    "with open('static/imagenet_classes_to_labels_map.txt') as f:\n",
+    "    labels = eval(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_topn_labels(row, n=10):\n",
+    "    outdf = row.astype(float).nlargest(n).reset_index()\n",
+    "    outdf.columns = ['label_id','percentage']\n",
+    "    outdf.label_id = outdf.label_id.astype(int)\n",
+    "    outdf['label_name'] = outdf.label_id.map(labels)\n",
+    "    return outdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_img_content(content):\n",
+    "    new_content =  [(w.strip(','), val) for val, sent in content for w in sent.split(' ') ]\n",
+    "    content_dict = {}\n",
+    "    for w in new_content:\n",
+    "        if w[0] in content_dict:\n",
+    "            content_dict[w[0]] += w[1]\n",
+    "        else:\n",
+    "            content_dict[w[0]] = w[1]\n",
+    "    return content_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 387,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 54.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "n_img = 10000\n",
+    "\n",
+    "# get weight data\n",
+    "dfw = pd.read_csv(data_path, low_memory=False)\n",
+    "\n",
+    "# generate df with descr of top10 classes\n",
+    "labelled_df = dfw.loc[:, dfw.columns[:3]].copy()\n",
+    "labelled_df['content'] = ''\n",
+    "\n",
+    "for i, image_name in enumerate(dfw.image_name.loc[:n_img]):\n",
+    "    topnlabels = get_topn_labels(dfw.loc[i, dfw.columns[3:]])\n",
+    "    labelled_df.loc[i, 'content'] = tuple(zip(topnlabels.percentage, topnlabels.label_name)) # keep weight info\n",
+    "\n",
+    "# select top n images\n",
+    "labelled_df = labelled_df.loc[:n_img].copy()\n",
+    "\n",
+    "# format the content as needed\n",
+    "labelled_df['new_content'] = labelled_df.content.apply(process_img_content)\n",
+    "\n",
+    "# walk-through entire BoW matrix\n",
+    "words_w_issues = []\n",
+    "bow = bow.astype(float)\n",
+    "for img_id in labelled_df.index:\n",
+    "    #print(img_id)\n",
+    "    # print(labelled_df.loc[img_id,'new_content'])\n",
+    "    content = labelled_df.loc[img_id,'new_content']\n",
+    "    for word in content:\n",
+    "        #print('\\t',word, content[word])\n",
+    "        try:\n",
+    "            word_idx = voc[word]\n",
+    "            bow[img_id, word_idx] *= content[word]\n",
+    "        except:\n",
+    "            words_w_issues += [word]\n",
+    "            # fix this later by tokenizing the words instead, using '(?u)\\\\b\\\\w\\\\w+\\\\b' + min 1 char"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "scipy.sparse.csr.csr_matrix"
+      ]
+     },
+     "execution_count": 388,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(bow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import sparse\n",
+    "sparse.save_npz(\"bow.npz\", bow)\n",
+    "bow_loaded = sparse.load_npz(\"bow.npz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3024, 1311), scipy.sparse.csr.csr_matrix)"
+      ]
+     },
+     "execution_count": 390,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow_loaded.shape, type(bow_loaded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11.979837540537119, 11.979837540537119)"
+      ]
+     },
+     "execution_count": 391,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow[500,:].sum(), bow_loaded[500,:].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    query = 'shoe'\n",
+    "\n",
+    "    # load BoW\n",
+    "    bow_loaded = sparse.load_npz(\"bow.npz\")\n",
+    "    \n",
+    "    # get query representation\n",
+    "    q = vect.transform([query]).todense()\n",
+    "    \n",
+    "    if q.sum() > 0:\n",
+    "        # rank results\n",
+    "        ranks = cosine_sim(q, bow.todense()[:,:])\n",
+    "        ranks = np.asarray(ranks)[0]\n",
+    "        ranked_idx = np.argsort(-ranks)\n",
+    "\n",
+    "        out = df.loc[ranked_idx,'image_name'].tolist()[:12]\n",
+    "        out = tuple(zip(out, list(ranks[ranked_idx])))\n",
+    "    else:\n",
+    "        out = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1858-14635-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       " '1057-13488-large_default-t-shirt-to-the-sea.jpg',\n",
+       " '1858-14625-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       " '1828-14526-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       " '1836-14455-large_default-sweat-daddy-cool.jpg',\n",
+       " '1828-14522-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       " '1858-14631-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       " '1588-13959-large_default-chaussons-en-laine-naturelle.jpg',\n",
+       " '1828-14524-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       " '1828-14525-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       " '1588-13961-large_default-chaussons-en-laine-naturelle.jpg',\n",
+       " '1858-14634-large_default-patinez-vos-souliers-dexception.jpg']"
+      ]
+     },
+     "execution_count": 422,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[img[0] for img in out]"
+   ]
   }
  ],
  "metadata": {
