--- a/app/query_imgs.ipynb
+++ b/app/query_imgs.ipynb
@@ -414,12 +414,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BoW on top10 classes - multi word w/ weighting"
+    "# BoW on top10 classes - multi word w/ weighting\n",
+    "\n",
+    "messy, needs cleaning => not working well so probably won't happen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,14 +500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 54.5 s\n"
+      "Wall time: 33.5 s\n"
      ]
     }
    ],
@@ -506,6 +517,7 @@
     "n_img = 10000\n",
     "\n",
     "# get weight data\n",
+    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\wir\\project\\img_proba_vecs_vgg19.csv\"\n",
     "dfw = pd.read_csv(data_path, low_memory=False)\n",
     "\n",
     "# generate df with descr of top10 classes\n",
@@ -541,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +562,7 @@
        "scipy.sparse.csr.csr_matrix"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +593,7 @@
        "((3024, 1311), scipy.sparse.csr.csr_matrix)"
       ]
      },
-     "execution_count": 390,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +613,7 @@
        "(11.979837540537119, 11.979837540537119)"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,34 +649,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### asses query output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1858-14635-large_default-patinez-vos-souliers-dexception.jpg',\n",
-       " '1057-13488-large_default-t-shirt-to-the-sea.jpg',\n",
-       " '1858-14625-large_default-patinez-vos-souliers-dexception.jpg',\n",
-       " '1828-14526-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       "['1858-14628-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       " '1588-13961-large_default-chaussons-en-laine-naturelle.jpg',\n",
+       " '1128-13518-large_default-rendez-vous-pour-creer-votre-creme-sur-mesure.jpg',\n",
+       " '1858-14621-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       " '810-6767-large_default-creez-votre-propre-vin.jpg',\n",
+       " '810-6769-large_default-creez-votre-propre-vin.jpg',\n",
        " '1836-14455-large_default-sweat-daddy-cool.jpg',\n",
        " '1828-14522-large_default-sac-a-dos-rucksack-rains.jpg',\n",
-       " '1858-14631-large_default-patinez-vos-souliers-dexception.jpg',\n",
-       " '1588-13959-large_default-chaussons-en-laine-naturelle.jpg',\n",
+       " '1828-14526-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       " '1858-14635-large_default-patinez-vos-souliers-dexception.jpg',\n",
        " '1828-14524-large_default-sac-a-dos-rucksack-rains.jpg',\n",
-       " '1828-14525-large_default-sac-a-dos-rucksack-rains.jpg',\n",
-       " '1588-13961-large_default-chaussons-en-laine-naturelle.jpg',\n",
-       " '1858-14634-large_default-patinez-vos-souliers-dexception.jpg']"
+       " '1057-13488-large_default-t-shirt-to-the-sea.jpg']"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "[img[0] for img in out]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(('1858-14628-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       "  0.0283170084434604),\n",
+       " ('1588-13961-large_default-chaussons-en-laine-naturelle.jpg',\n",
+       "  0.02051963914911854),\n",
+       " ('1128-13518-large_default-rendez-vous-pour-creer-votre-creme-sur-mesure.jpg',\n",
+       "  0.01707700685567747),\n",
+       " ('1858-14621-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       "  0.015795164104897598),\n",
+       " ('810-6767-large_default-creez-votre-propre-vin.jpg', 0.010838527027729517),\n",
+       " ('810-6769-large_default-creez-votre-propre-vin.jpg', 0.010838527027729517),\n",
+       " ('1836-14455-large_default-sweat-daddy-cool.jpg', 0.00895927978772733),\n",
+       " ('1828-14522-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       "  0.006381062369936124),\n",
+       " ('1828-14526-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       "  0.006007880360790437),\n",
+       " ('1858-14635-large_default-patinez-vos-souliers-dexception.jpg',\n",
+       "  0.005856116808106854),\n",
+       " ('1828-14524-large_default-sac-a-dos-rucksack-rains.jpg',\n",
+       "  0.005442486503566951),\n",
+       " ('1057-13488-large_default-t-shirt-to-the-sea.jpg', 0.004514965471385565))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### inspect in detail to find issue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((0.4332301020622253, 'shoe shop, shoe-shop, shoe store'),\n",
+       " (0.26650470495224, 'Loafer'),\n",
+       " (0.17212828993797302, 'cowboy boot'),\n",
+       " (0.0724232867360115, 'clog, geta, patten, sabot'),\n",
+       " (0.02372111566364765, 'sandal'),\n",
+       " (0.009768922813236712, 'holster'),\n",
+       " (0.006344985216856003, 'running shoe'),\n",
+       " (0.00501524843275547, 'buckle'),\n",
+       " (0.0018876956310123203, 'violin, fiddle'),\n",
+       " (0.0008688647649250925,\n",
+       "  'cellular telephone, cellular phone, cellphone, cell, mobile phone'))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labelled_df.loc[ranked_idx[0], 'content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((0.35090571641922, 'shoe shop, shoe-shop, shoe store'),\n",
+       " (0.2528805136680603, 'thimble'),\n",
+       " (0.17065788805484772, 'perfume, essence'),\n",
+       " (0.1090470254421234, 'conch'),\n",
+       " (0.01723034493625164, 'screw'),\n",
+       " (0.014787650667130947, 'switch, electric switch, electrical switch'),\n",
+       " (0.011821650899946691, 'lotion'),\n",
+       " (0.011689462698996069, 'medicine chest, medicine cabinet'),\n",
+       " (0.011311333626508713, 'wine bottle'),\n",
+       " (0.004179593641310929, 'vending machine'))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labelled_df.loc[ranked_idx[2], 'content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((0.18596436083316806, 'clog, geta, patten, sabot'),\n",
+       " (0.17596831917762756, 'mailbag, postbag'),\n",
+       " (0.151167631149292, 'sandal'),\n",
+       " (0.13493013381958008, 'purse'),\n",
+       " (0.08857740461826323, 'shoe shop, shoe-shop, shoe store'),\n",
+       " (0.06599850207567215, 'Loafer'),\n",
+       " (0.0511264018714428, 'buckle'),\n",
+       " (0.028811471536755562,\n",
+       "  'backpack, back pack, knapsack, packsack, rucksack, haversack'),\n",
+       " (0.01952643133699894, 'running shoe'),\n",
+       " (0.013313799165189266, 'pencil box, pencil case'))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labelled_df.loc[ranked_idx[7], 'content']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "prod_id                                                     810\n",
+       "img_id                                                     6767\n",
+       "image_name    810-6767-large_default-creez-votre-propre-vin.jpg\n",
+       "content       shoe shop, shoe-shop, shoe store remote contro...\n",
+       "Name: 2254, dtype: object"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[ranked_idx[4]]"
    ]
   }
  ],
