image_search_res5 in web app code, word emb loading upon running web app, solved issue in ranking of images in image_search_res5

--- a/app/query_imgs_w_emb_wip.ipynb
+++ b/app/query_imgs_w_emb_wip.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import random\n",
-    "import os"
+    "import os\n",
+    "import numpy as np\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# load word vecs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,21 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 59 s\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1min 31s\n"
      ]
     }
    ],
@@ -50,7 +59,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io\n",
+    "\n",
+    "def load_vectors(fname):\n",
+    "    fin = io.open(fname, 'r', encoding='utf-8', newline='\\n', errors='ignore')\n",
+    "    n, d = map(int, fin.readline().split())\n",
+    "    data = {}\n",
+    "    for line in fin:\n",
+    "        tokens = line.rstrip().split(' ')\n",
+    "        data[tokens[0]] = map(float, tokens[1:])\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\wir\\project\"\n",
+    "fname = r\"wiki-news-300d-1M-subword.vec\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time\n",
+    "wv = load_vectors(\n",
+    "    os.path.join(data_path, fname))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 52.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\nlp\\nlp_hw3\"\n",
+    "glove_data_file = 'glove.6B.300d.txt'\n",
+    "emb = pd.read_table(os.path.join(data_path, glove_data_file), sep=\" \", index_col=0, header=None, quoting=csv.QUOTE_NONE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# generate img embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,22 +145,53 @@
     "\n",
     "def getwv_multi_labels(labels):\n",
     "    sublabels = labels.split(', ')\n",
-    "    return sum([getwv(subl) for subl in  sublabels]) / len(sublabels)\n",
-    "\n",
-    "get_weight_vec = lambda tup: sum([getwv(label) * weight for weight, label in tup])\n",
-    "get_weight_vec_multuilbl = lambda tup: sum([getwv_multi_labels(label) * weight for weight, label in tup])"
+    "    return sum([getwv(subl) for subl in  sublabels]) / len(sublabels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_weighted_sum_vec = lambda tup: sum([getwv(label) * weight for weight, label in tup])\n",
+    "get_weighted_sum_vec_multilbl = lambda tup: sum([getwv_multi_labels(label) * weight for weight, label in tup])\n",
+    "\n",
+    "get_vec_first_label = lambda tup: sum([getwv_multi_labels(label) for weight, label in [tup[0]]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path='static/img_top10_labels_w_weights.csv'\n",
+    "    \n",
+    "# load image label data\n",
+    "labelled_df = pd.read_csv(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ast import literal_eval\n",
+    "labelled_df.content = labelled_df.content.apply(literal_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.29 s\n"
+      "Wall time: 935 ms\n"
      ]
     }
    ],
@@ -84,28 +199,46 @@
     "%%time\n",
     "img_emb_dict = dict(zip(\n",
     "    labelled_df.img_id,\n",
-    "    labelled_df.content.apply(get_weight_vec_multuilbl)\n",
+    "    labelled_df.content.apply(get_weight_vec_multilbl)\n",
+    "    #labelled_df.content.apply(get_vec_first_label)\n",
     "))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open(r\"static/img_emb_dict.pickle\", \"wb\") as f:\n",
-    "    pickle.dump(img_emb_dict, f)"
+    "#with open(r\"static/img_emb_dict.pkl\", \"wb\") as f:\n",
+    "#    pickle.dump(img_emb_dict, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# build search routine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def image_search_res5(query):\n",
+    "#with open(r\"static/img_emb_dict.pkl\", \"rb\") as f:\n",
+    "#    img_emb_dict = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_search_res5(query, img_emb_dict):\n",
     "    \n",
     "    # get query embedding representation\n",
     "    q = getwv_multi_labels(query)\n",
@@ -114,68 +247,95 @@
     "        \n",
     "        # parse query\n",
     "        # ...\n",
-    "    \n",
-    "        # load img emb\n",
-    "        with open(r\"static/img_emb_dict.pickle\", \"rb\") as f:\n",
-    "            img_emb_dict = pickle.load(f)\n",
-    "    \n",
-    "        # score and rank images\n",
-    "        score = [cosine_sim(q, img_emb_dict[key]) for key in img_emb_dict]\n",
-    "        score = np.array(score)\n",
-    "        ranked_idx = np.argsort(-score)\n",
-    "        ranked_score = score[ranked_idx]\n",
-    "\n",
-    "        # gather images w/ top ranks\n",
-    "        images = labelled_df.loc[ranked_idx, 'image_name'].tolist()[:12]\n",
     "        \n",
+    "        # map image ids to names\n",
+    "        img_id_to_name = dict(zip(labelled_df.img_id, labelled_df.image_name))\n",
+    "        \n",
+    "        # score and rank images\n",
+    "        img_idxs = img_emb_dict.keys()\n",
+    "        score = [(\n",
+    "            img_id_to_name[key]\n",
+    "            ,cosine_sim(q, img_emb_dict[key])\n",
+    "        ) for key in img_idxs]\n",
+    "        ranked = sorted(score, key=lambda tup: tup[1], reverse=True)\n",
+    "    \n",
     "        # output list of images and proba\n",
-    "        return tuple(zip(images, ranked_score))\n",
+    "        return ranked[:12]\n",
     "    else:\n",
     "        return []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1828-14522-large_default-sac-a-dos-rucksack-rains.jpg\n",
+      "0.15093912\n",
+      "((0.18596436083316806, 'clog, geta, patten, sabot'), (0.17596831917762756, 'mailbag, postbag'), (0.151167631149292, 'sandal'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = 'hiking shoes'\n",
+    "id_ = 14522\n",
+    "print(\n",
+    "    labelled_df.query(\"img_id == '{}'\".format(id_)).image_name.values[0])\n",
+    "print(\n",
+    "    cosine_sim(img_emb_dict['{}'.format(id_)], getwv_multi_labels(query)))\n",
+    "print(\n",
+    "    labelled_df.query(\"img_id == '{}'\".format(id_)).loc[:,'content'].values[0][:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('1797-14433-large_default-casque-de-velo-urbain.jpg', 0.7324617),\n",
-       " ('1681-13966-large_default-affiche-epaule-jete.jpg', 0.7185941),\n",
-       " ('1736-14042-large_default-roue-du-caviste.jpg', 0.7134589),\n",
-       " ('413-3333-large_default-whisky-mackmyra-.jpg', 0.71277833),\n",
-       " ('1179-10038-large_default-livre-nouveaux-artisans.jpg', 0.71108365),\n",
-       " ('1786-14593-large_default-livre-corpus-tattoo.jpg', 0.71098363),\n",
-       " ('799-6949-large_default-livre-le-vin-c-est-pas-sorcier.jpg', 0.7073882),\n",
-       " ('1204-10271-large_default-bougie-pf-candle-co.jpg', 0.70606476),\n",
-       " ('1017-8642-large_default-atlas-des-constellations.jpg', 0.70595944),\n",
-       " ('640-5519-large_default-atlas-des-contrees-revees.jpg', 0.7048262),\n",
-       " ('640-5521-large_default-atlas-des-contrees-revees.jpg', 0.7041713),\n",
-       " ('1179-10037-large_default-livre-nouveaux-artisans.jpg', 0.70380104))"
+       "[('1588-13961-large_default-chaussons-en-laine-naturelle.jpg', 0.60665333),\n",
+       " ('912-8278-large_default-flasque-en-cuivre.jpg', 0.58782387),\n",
+       " ('1057-13488-large_default-t-shirt-to-the-sea.jpg', 0.5869558),\n",
+       " ('1588-13261-large_default-chaussons-en-laine-naturelle.jpg', 0.58575124),\n",
+       " ('1828-14527-large_default-sac-a-dos-rucksack-rains.jpg', 0.57823175),\n",
+       " ('1828-14522-large_default-sac-a-dos-rucksack-rains.jpg', 0.57441026),\n",
+       " ('1191-10092-large_default-maillot-de-bain-iguazu.jpg', 0.54713625),\n",
+       " ('1588-13960-large_default-chaussons-en-laine-naturelle.jpg', 0.54574186),\n",
+       " ('1828-14524-large_default-sac-a-dos-rucksack-rains.jpg', 0.5187537),\n",
+       " ('1257-10737-large_default-bracelet-manille-argent-massif.jpg', 0.5122339),\n",
+       " ('1755-14207-large_default-echarpe-alphonse.jpg', 0.51223165),\n",
+       " ('1783-14379-large_default-affiches-des-pays-du-monde.jpg', 0.51004076)]"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = 'hiking shoes'\n",
-    "image_search_res5(query)"
+    "query = 'shoes'\n",
+    "image_list = image_search_res5(query, img_emb_dict)\n",
+    "with open(r\"static/image_list.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(image_list, f)\n",
+    "image_list"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# run this first"
+    "# add weights to image labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,33 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    path='static/img_top10_labels.csv'\n",
-    "    \n",
-    "    # load image label data\n",
-    "    df = pd.read_csv(path)\n",
-    "\n",
-    "    # generate BoW\n",
-    "    vect = CountVectorizer()\n",
-    "    bow = vect.fit_transform(df.content.tolist())\n",
-    "    voc = vect.vocabulary_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,31 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_img_content(content):\n",
-    "    new_content =  [(w.strip(','), val) for val, sent in content for w in sent.split(' ') ]\n",
-    "    content_dict = {}\n",
-    "    for w in new_content:\n",
-    "        if w[0] in content_dict:\n",
-    "            content_dict[w[0]] += w[1]\n",
-    "        else:\n",
-    "            content_dict[w[0]] = w[1]\n",
-    "    return content_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 31.4 s\n"
+      "Wall time: 1min 11s\n"
      ]
     }
    ],
@@ -284,6 +401,18 @@
     "\n",
     "# select top n images\n",
     "labelled_df = labelled_df.loc[:n_img].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    path='static/img_top10_labels_w_weights.csv'\n",
+    "    \n",
+    "    # load image label data\n",
+    "    labelled_df.to_csv(path, index=False)"
    ]
   }
  ],
