--- a/app/query_imgs_w_emb_wip.ipynb
+++ b/app/query_imgs_w_emb_wip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 31s\n"
+      "Wall time: 1min 27s\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from imgsearch import cosine_sim\n",
+    "import re\n",
     "\n",
     "def getwv(s):\n",
     "    return model.get_word_vector(s.lower())\n",
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1.96 s\n"
+      "Wall time: 4.93 s\n"
      ]
     }
    ],
@@ -214,13 +215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
     "#with open(r\"static/img_emb_dict.pkl\", \"wb\") as f:\n",
-    "#    pickle.dump(img_emb_dict, f)"
+    "    #pickle.dump(img_emb_dict, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### load img embeddings"
    ]
   },
   {
@@ -232,17 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open(r\"static/img_emb_dict.pkl\", \"rb\") as f:\n",
-    "#    img_emb_dict = pickle.load(f)"
+    "with open(r\"static/img_emb_dict.pkl\", \"rb\") as f:\n",
+    "    img_emb_dict = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -415,16 +422,16 @@
        "  0.2930161408907653)]"
       ]
      },
-     "execution_count": 520,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query = 'book'\n",
+    "query = 'bicyle'\n",
     "image_list = image_search_res5(query, img_emb_dict)\n",
-    "with open(r\"static/image_list.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(image_list, f)\n",
+    "#with open(r\"static/image_list.pkl\", \"wb\") as f:\n",
+    "#    pickle.dump(image_list, f)\n",
     "image_list"
    ]
   },
