enabled word embeddings-based search in web app, albeit long to load, and with a threshold

--- a/app/query_imgs_w_emb_full.ipynb
+++ b/app/query_imgs_w_emb_full.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,21 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1min 9s\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 1min 27s\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +87,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'the'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-6d8ac1b5ab89>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'time'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m wv = load_vectors(\n\u001b[1;32m----> 3\u001b[1;33m     os.path.join(data_path, fname))\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-5-bb2dfd98ce5a>\u001b[0m in \u001b[0;36mload_vectors\u001b[1;34m(fname)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mload_vectors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mfin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'ignore'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfin\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfin\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'the'"
+     ]
+    }
+   ],
    "source": [
     "%time\n",
     "wv = load_vectors(\n",
@@ -98,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,22 +129,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 52.9 s\n"
+      "Wall time: 50.1 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\nlp\\nlp_hw3\"\n",
+    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\glove.6B\"\n",
     "glove_data_file = 'glove.6B.300d.txt'\n",
     "emb = pd.read_table(os.path.join(data_path, glove_data_file), sep=\" \", index_col=0, header=None, quoting=csv.QUOTE_NONE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.990658141405909"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.linalg.norm(emb.loc['shoes'] - emb.loc['shoe'])"
    ]
   },
   {
@@ -134,20 +177,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "from imgsearch import cosine_sim\n",
     "import re\n",
     "\n",
-    "def getwv(s):\n",
-    "    return model.get_word_vector(s.lower())\n",
-    "\n",
-    "def getwv_multi_labels(labels):\n",
+    "def getwv_multi_labels(labels, model):\n",
     "    #sublabels = labels.split(', ')\n",
     "    sublabels = re.split(r'[, ]\\s*', labels)\n",
-    "    return sum([getwv(subl) for subl in  sublabels]) / len(sublabels)"
+    "    return sum([model.get_word_vector(subl.lower()) for subl in  sublabels]) / len(sublabels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getwv(s):\n",
+    "    return model.get_word_vector(s.lower())"
    ]
   },
   {
@@ -158,14 +208,14 @@
    "source": [
     "# img emb = weighted sum of vec\n",
     "get_weighted_sum_vec = lambda tup: sum([getwv(label) * weight for weight, label in tup])\n",
-    "get_weighted_sum_vec_multilbl = lambda tup: sum([getwv_multi_labels(label) * weight for weight, label in tup])\n",
+    "get_weighted_sum_vec_multilbl = lambda tup: sum([getwv_multi_labels(label, model) * weight for weight, label in tup])\n",
     "\n",
     "# img emb = [(vec, weight)]\n",
     "get_tup_vec_weigth = lambda tup: [(getwv(label), weight) for weight, label in tup]\n",
-    "get_tup_vec_weight_multilbl = lambda tup: [(getwv_multi_labels(label), weight) for weight, label in tup]\n",
+    "get_tup_vec_weight_multilbl = lambda tup: [(getwv_multi_labels(label, model), weight) for weight, label in tup]\n",
     "\n",
     "# img emb = vec of first label\n",
-    "get_vec_first_label = lambda tup: sum([getwv_multi_labels(label) for weight, label in [tup[0]]])"
+    "get_vec_first_label = lambda tup: sum([getwv_multi_labels(label, model) for weight, label in [tup[0]]])"
    ]
   },
   {
@@ -239,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def image_search_res5(query, img_emb_dict):\n",
+    "def image_search_res5(query, img_emb_dict, model):\n",
     "    \n",
     "    # get query embedding representation\n",
-    "    q = getwv_multi_labels(query)\n",
+    "    q = getwv_multi_labels(query, model)\n",
     "    \n",
     "    if q.sum() != 0:\n",
     "        \n",
@@ -298,7 +348,7 @@
     "def inspect_img_vs_query(query, img_id):\n",
     "    print(\n",
     "        labelled_df.query(\"img_id == '{}'\".format(img_id)).image_name.values[0])\n",
-    "    scores = [(weight, cosine_sim(getwv_multi_labels(query), vec)) for vec, weight in img_emb_dict['{}'.format(img_id)][:3]]\n",
+    "    scores = [(weight, cosine_sim(getwv_multi_labels(query, model), vec)) for vec, weight in img_emb_dict['{}'.format(img_id)][:3]]\n",
     "    scores = [(weight * sim, weight, sim) for weight, sim in scores]\n",
     "    print(\n",
     "        sum([score[0] for score in scores]))\n",
@@ -324,7 +374,7 @@
     }
    ],
    "source": [
-    "cosine_sim(getwv_multi_labels(\"plunger, plumber's helper\"), getwv_multi_labels(\"asdfsgd\"))"
+    "cosine_sim(getwv_multi_labels(\"plunger, plumber's helper\", model), getwv_multi_labels(\"asdfsgd\", model))"
    ]
   },
   {
@@ -398,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -422,14 +472,14 @@
        "  0.2930161408907653)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = 'bicyle'\n",
-    "image_list = image_search_res5(query, img_emb_dict)\n",
+    "image_list = image_search_res5(query, img_emb_dict, model)\n",
     "#with open(r\"static/image_list.pkl\", \"wb\") as f:\n",
     "#    pickle.dump(image_list, f)\n",
     "image_list"
